# BritishJailCells

./: .flake8  .gitignore  README.md  build.xml
Client/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mock-config.properties  pyproject.toml  setup.bat  setup.sh
Client/src/: Api.py  App.py  Routes.py  Utility.py
Client/src/models/: Application.py  Coordinates.py  Details.py  History.py  Location.py  ProximityData.py  Room.py  Rooms.py  WeatherData.py
Client/src/static/css/: horizontal_break.css  style.css  table.css  timeline.css  tristate_checkbox.css
Client/src/static/js/: geoCodingForm.js  index.js  proximityForm.js  toggleTheme.js  toggle_theme.js  tristateCheckbox.js  tristate_checkbox.js
Client/src/templates/: base.html  error.html  home.html  missing_room.html  room.html  room_label.html  table.html  tristate_checkbox.html
Client/src/templates/macros/: room_label.html  table.html  timeline.html  tristate_checkbox.html
Orchestrator/: README.md  build.xml  mock-config.properties
Orchestrator/nbproject/: project.properties  project.xml
Orchestrator/sql/sqlite/: create-db.sql  populate-db.sql
Orchestrator/sql/transact-sql/: create.sql  populate-db.sql
Orchestrator/sql/transact-sql/procedures/: ApplyForRoom.sql  CancelApplication.sql  GetRoomHistory.sql  SearchRoomDetails.sql  UpdateApplicationStatus.sql  sp_apply_for_room.sql  sp_get_room_history.sql  sp_search_room_details.sql  (+1 more)
Orchestrator/web/WEB-INF/: web.xml
lib/: nblibraries.properties
nbproject/: build-impl.xml  genfiles.properties  project.properties  rest-build.xml
(+66 files in other folders)
